Clojure Collector: fixed empty querystring in access-valve (#938)
Clojure Collector: fixed IP address forwarding for VPC-based environments (#854)
Clojure Collector: added support for API vendor and version in routing (#925)
Clojure Collector: added support for POST as well as GET (#654)
Scala Stream Collector: fixed broken link to `thrift-raw-event`, thanks @bamos! (#955)
Scala Common Enrich: bumped to 0.6.0
Scala Common Enrich: split out Clojure and CloudFront Collector event processing (#943)
Scala Common Enrich: added CljTomcatLoaderSpec tests (#963)
Scala Common Enrich: filtering non-GETs from CloudfrontLoader (#944)
Scala Common Enrich: replaced all Argonaut code with json4s (#945)
Scala Common Enrich: replaced CanonicalInput and TrackerPayload with CollectorPayload and RawEvent (#946)   - TODO
Scala Common Enrich: updated EnrichmentManager to process RawEvent not CanonicalInput (#903)                - TODO
Scala Common Enrich: added input adapter to convert NV pairs to JSON (#904)                                 - TODO fix this title
Scala Common Enrich: added parsing of request body and content type for Clojure Collector raw events (#930) - TODO
Scala Common Enrich: geo-IP lookup now supports ip parameter on querystring (#961)
Scala Common Enrich: IP address anonymization now works with ip parameter on querystring (#960)
Scala Hadoop Enrich: bumped to 0.7.0                                                                        - TODO
Scala Hadoop Enrich: bumped to Scala Common Enrich 0.6.0 (#940)                                             - TODO
Scala Hadoop Enrich: updated to support generating multiple enriched events from one raw payload (#902)     - TODO
EmrEtlRunner: bumped to 0.9.1                                                                               - TODO
EmrEtlRunner: fixed @jobflow.ec2_subnet_id not being set due to incorrect guard, thanks @rslifka! (#956)
StorageLoader: bumped to 0.3.2